traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  val largeur : Int = getLargeur()
  val hauteur : Int = getHauteur()
  val diagMilieu : Int = largeur - 1
  val nbDiag : Int = hauteur + largeur - 2
  var compteur : Int = 0
  var abscisse : Int = 0
  var ordonnee : Int = 0
  while (diag <= diagMilieu) {
    setPos(0,diag)
    ecritMessage(compteur)
  	for (compt <- 1 to diag) {
      abscisse = abscisse + 1
      ordonnee = ordonnee - 1
      setPos(abscisse, ordonnee)
      compteur = compteur + 1
      ecritMessage(compteur)
    }
    diag = diag + 1
    compteur = compteur + 1
  }
  while (diag <= nbDiag) {
    setPos(hauteur - 1,diag - largeur + 1)
    ecritMessage(compteur)
  	for (compt <- 1 to (nbDIag - diag)) {
      abscisse = abscisse + 1
      ordonnee = ordonnee - 1
      setPos(abscisse, ordonnee)
      compteur = compteur + 1
      ecritMessage(compteur)
    }
    diag = diag + 1
    compteur = compteur + 1
  }
}